# ITI-QT-QML-Playground

./: .gitignore  CMakeLists.txt
S1-Intro/: README.md
S2/App1/: CMakeLists.txt  Main.qml
S2/App4/: main.cpp
S2/App5/: Main.qml.autosave  main.cpp
Task01_GalleryApp/: AboutScreen.qml  CMakeLists.txt  HomeScreen.qml  Main.qml  README.md  SplashScreen.qml
Task02_Basic_Calculator/: Main.qml  README.md
Task03_Connectivity_Control/: CMakeLists.txt  Main.qml  README.md  bluetoothmanager.cpp  bluetoothmanager.h  main.cpp  wifimanager.cpp  wifimanager.hpp
Task04_WeatherApp/: CMakeLists.txt  Main.qml  README.md  WeatherManager.cpp  WeatherManager.h  main.cpp
Task05_Toggle_LED_on_Rpi/: CMakeLists.txt  LedController.cpp  LedController.h  Main.qml  README.md  main.cpp
Task06-MultimediaPlayer/MultimediaPlayer/: CMakeLists.txt  Main.qml  README.md  main.cpp  usbmanager.cpp  usbmanager.h
Task1/: CMakeLists.txt  GalleryScreen.qml  GalleryScreen.qml.autosave  Main.qml  README.md
workspace/S2/: README.md
workspace/S2/App4/: CMakeLists.txt  Main.qml
workspace/S2/App5/: CMakeLists.txt  Main.qml  Main.qml.autosave
workspace/S2/app2/: Main.qml
workspace/S2/app3/: CMakeLists.txt
workspace/S3/App1/: CMakeLists.txt  MButton.qml  Main.qml  main.cpp
workspace/S3/App10_ComboBox/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App11_Nop/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App12_Swipe/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App13_progressBar/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App14/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App14_RangeSplider/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App2/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App3/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App4/: Main.qml
workspace/S3/App5/: CMakeLists.txt  Main.qml
workspace/S3/App6/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App7/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App8/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/App9_checkBox/: CMakeLists.txt  Main.qml  main.cpp
workspace/S3/Mini_task/: CMakeLists.txt  MCard.qml  Main.qml  main.cpp
workspace/S4/App2_Message_Dialog/: CMakeLists.txt  Main.qml  main.cpp
workspace/S4/App3_GridView/: CMakeLists.txt  Main.qml  main.cpp
workspace/S4/App4_Animation/: AbdoRectangle.qml  CMakeLists.txt  Main.qml  main.cpp
workspace/S4/App5_Animation2/: CMakeLists.txt  Main.qml  main.cpp
workspace/S4/App6_Animation3/: CMakeLists.txt  Main.qml  main.cpp
workspace/S4/App8_Network/: CMakeLists.txt  main.cpp
workspace/S4/App_Pages/: CMakeLists.txt  Main.qml  main.cpp
workspace/S4/untitled/: Main.qml
