    cmake_minimum_required(VERSION 3.16)
project(ITI_QT_QML_Playground)

# ============== Session Work ==============
# S1 (add when you have projects)
# add_subdirectory(workspace/S1-Intro/SomeApp)

# S2 Projects
add_subdirectory(workspace/S2/App1)
add_subdirectory(workspace/S2/app2)
add_subdirectory(workspace/S2/app3)
add_subdirectory(workspace/S2/App4)
add_subdirectory(workspace/S2/App5)

# S3 (future sessions)
# add_subdirectory(workspace/S3/App1)

# ============== Tasks ==============
# add_subdirectory(Tasks/Task1)
# add_subdirectory(Tasks/Task2)
add_subdirectory(Task1)
